# Generated by Django 4.2 on 2025-10-11 01:07

from django.db import migrations, models
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('empresa', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='EmpresaNaoClassificada',
            fields=[
                ('id', models.BigAutoField(db_column='enc_id', primary_key=True, serialize=False)),
                ('uuid', models.UUIDField(db_column='enc_uuid', default=uuid.uuid4, editable=False, unique=True)),
                ('cnpj', models.CharField(db_column='enc_cnpj', max_length=18, unique=True)),
                ('nome_fantasia', models.CharField(db_column='enc_nome_fantasia', max_length=255)),
                ('razao_social', models.CharField(db_column='enc_razao_social', max_length=255)),
                ('uf', models.CharField(db_column='enc_uf', max_length=2)),
                ('cidade', models.CharField(db_column='enc_cidade', max_length=255)),
                ('logradouro', models.CharField(db_column='enc_logradouro', max_length=255)),
                ('numero', models.CharField(db_column='enc_numero', max_length=255)),
                ('bairro', models.CharField(db_column='enc_bairro', max_length=255)),
                ('cep', models.CharField(db_column='enc_cep', max_length=9)),
                ('telefone', models.CharField(db_column='enc_telefone', max_length=20)),
                ('email', models.CharField(db_column='enc_email', max_length=255)),
                ('dt_criacao', models.DateTimeField(auto_now_add=True, db_column='enc_dt_criacao')),
            ],
            options={
                'verbose_name_plural': 'Empresas Não Classificadas',
                'db_table': 'empresas_nao_classificadas',
            },
        ),
        migrations.CreateModel(
            name='MinhaEmpresa',
            fields=[
                ('id', models.BigAutoField(db_column='emp_id', primary_key=True, serialize=False)),
                ('uuid', models.UUIDField(db_column='emp_uuid', default=uuid.uuid4, editable=False, unique=True)),
                ('nome', models.CharField(db_column='emp_nome', default='Minha Empresa', max_length=255)),
                ('cnpj', models.CharField(db_column='emp_cnpj', max_length=18, unique=True)),
                ('senha_hash', models.CharField(blank=True, db_column='emp_senha_hash', default='', max_length=128)),
                ('dt_criacao', models.DateTimeField(auto_now_add=True, db_column='emp_dt_criacao')),
                ('dt_alteracao', models.DateTimeField(auto_now=True, db_column='emp_dt_alteracao')),
                ('usr_criacao', models.IntegerField(blank=True, db_column='emp_usr_criacao', null=True)),
                ('usr_alteracao', models.IntegerField(blank=True, db_column='emp_usr_alteracao', null=True)),
                ('dt_exclusao', models.DateTimeField(blank=True, db_column='emp_dt_exclusao', null=True)),
            ],
            options={
                'verbose_name_plural': 'Minha Empresa',
                'db_table': 'cadastro_empresas',
            },
        ),
    ]
