@startuml models_diagram_revisado
' Diagrama de Modelos Revisado - Gestão de Notas
' skinparam linetype ortho ' Força linhas retas (ortogonais)

entity MinhaEmpresa {
  * id : int (PK)
  --
  nome : varchar(255)
  cnpj : varchar(18) {unique}
}

entity Parceiro {
  * id : int (PK)
  --
  nome : varchar(255)
  cnpj : varchar(18) {unique}
  tipo : varchar(10) ' Cliente, Fornecedor
}

entity JobProcessamento {
  * id : int (PK)
  --
  #minha_empresa_id : int (FK)
  arquivo_original : varchar(255)
  status : varchar(12) ' PENDENTE, PROCESSANDO, CONCLUIDO, ERRO
  dt_criacao : timestamptz
  dt_conclusao : timestamptz
  mensagem_erro : text
}

entity NotaFiscal {
  * id : int (PK)
  --
  #job_origem_id : int (FK)
  #parceiro_id : int (FK)
  numero : varchar(100)
  data_emissao : date
  valor_total : numeric(10,2)
}

entity LancamentoFinanceiro {
  * id : int (PK)
  --
  #nota_fiscal_id : int (FK)
  descricao : varchar(255)
  valor : numeric(10,2)
  tipo : varchar(10) ' DEBITO, CREDITO
  status : varchar(10) ' ABERTO, PAGO, VENCIDO
  data_vencimento : date
  data_pagamento : date
}

' Relacionamentos
MinhaEmpresa ||--|{ JobProcessamento
JobProcessamento ||--|{ NotaFiscal
Parceiro ||--o{ NotaFiscal
NotaFiscal ||--o{ LancamentoFinanceiro

@enduml